cross toggle button spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ h1,h2,h3,h4,h5,h6{
   }
   @media screen and (min-width: 768px) {
     #openSidebarMenu:checked ~ .sidebarIconToggle{
-      margin-left: 35%;
+      margin-left: 25%;
       margin-top:-4px;
     }
   }
